--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Machine monitor APIs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Victor Rodrigues",
   "license": "MIT",
   "dependencies": {
     "fastify": "^1.9.0",
+    "node-netstat": "^1.5.0",
     "systeminformation": "^3.42.4"
   },
   "devDependencies": {}
